--- a/VRChat/82/1260482.html
+++ b/VRChat/82/1260482.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "vzDhgrEhMRNGsw2DVhmRA3DDxpQZGbt6Dn8riPfDcz4="></script>
+    "TxQE51r/jDBzEvim7l5AyuackRC1J6fTh6rQyxqbEw4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『ルナレッタ』単品 (人間ver / 獣人ver)","description":"こちらはアバター単品販売のページです。\n『ルナレッタ(人間ver)』もしくは『ルナレッタ(獣人ver)』をお選びください。\n\n両方のモデル、もしくは変身ギミックありのモデルを購入されたい場合は『ルナレッタ(変身セット)』をご購入ください。\n\n\n\n本モデルはUnityのHumanoid形式に対応した3Dモデルとなっております。\n【ご注意】\nこのパッケージはVRChatのSDK2(avatars2.0)向けに設定したものです。以降のバージョンに対応させる場合はご自身での設定が必要となりますのでご了承の上ご購入ください。\n\n＜内容物＞\n(両バージョン構成は同じです。モデルのみ異なります)\n・unitypackageファイル\n・blend形式およびfbx形式モデルデータ\n  (fbx形式はテクスチャ未設定)\n・テクスチャ画像\n・psd形式改変用テクスチャ画像\n・サンプル表情アニメーション\n\n\n＜利用規約＞\n動画やゲーム、アプリにおける本モデルの利用は商用を含めて可能です。\nモデル自体の再配布、販売を禁止します。\n(ゲーム等の公開の際、暗号化していないフォルダに入れるなど\nモデルデータとして再度使用できる状態での配布・販売はおやめください)\nモデルの改変は公序良俗に反するものでなければご自由に行ってください。\n\nVRChatへのアップロードにて購入者ご本人のみが使用する場合は再配布と捉えないものとします。\nアバターペデスタルやCloning機能など他人が使用できる状態にすることはご遠慮ください。\n\n\n2019/03/16　不具合修正しました(Ver1.01)\n・獣人単品モデル\n表情発動時に体のメッシュがはみ出る、動いた際に服(首の前掛け)のメッシュ裏がはみ出る、表情LunaSmileFの設定ミス　を修正\n2019/03/08　販売開始しました　(Ver1.00)","url":"https://booth.pm/ja/items/1260482","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"3000","highPrice":"3000"},"image":"https://booth.pximg.net/c/620x620/b58bbbf9-f493-4b3f-87ba-a69d30c4b84f/i/1260482/135317bb-538d-4fcf-a0d1-73b820dea5c7_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vzDhgrEhMRNGsw2DVhmRA3DDxpQZGbt6Dn8riPfDcz4="></script>
+    nonce="TxQE51r/jDBzEvim7l5AyuackRC1J6fTh6rQyxqbEw4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -762,7 +762,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;}]"
+    "[{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
